--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "My Website"
-author: "Your Name"
+author: "Joan Kahindi"
 date: "Last updated on `r Sys.Date()`"
 output:
   html_document:
